--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.3",
     "cra-template": "1.1.3",
     "react": "^18.0.0",
     "react-bootstrap": "^2.2.3",
